--- a/src/.vuepress/public/styles/index.scss
+++ b/src/.vuepress/public/styles/index.scss
@@ -1,3 +1,5 @@
+@import url('/fonts/iconfont.scss');
+
 ::-webkit-scrollbar {
   width: 1em;
   width: 0;
@@ -15,20 +17,17 @@
   // max-width: 100vw;
   padding: 0;
 
-  .fullscreen{
-    height: calc( 100vh - var(--navbar-height) );
+  .fullscreen {
+    height: calc(100vh - var(--navbar-height));
     // height: auto;
     overflow: hidden;
     width: 100vw;
     position: absolute;
-    top:  var(--navbar-height) ;
+    top: var(--navbar-height);
     left: 0;
-
   }
-
-  
 }
 
-.page-meta{
+.page-meta {
   display: none;
 }
