add animation scss

--- a/src/.vuepress/public/fonts/iconfont.scss
+++ b/src/.vuepress/public/fonts/iconfont.scss
@@ -6,487 +6,479 @@
 }
 // https://www.iconfont.cn/manage/index?manage_type=myprojects&projectId=3616492
 
-.iconfont {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-yangshi_icon_tongyong_call:before {
+.icon-call:before {
   content: "\e663";
 }
 
-.icon-yangshi_icon_tongyong_voice:before {
+.icon-voice:before {
   content: "\e664";
 }
 
-.icon-yangshi_icon_tongyong_user:before {
+.icon-user:before {
   content: "\e665";
 }
 
-.icon-yangshi_icon_tongyong_customer_service:before {
+.icon-customer_service:before {
   content: "\e666";
 }
 
-.icon-yangshi_icon_tongyong_dislike:before {
+.icon-dislike:before {
   content: "\e667";
 }
 
-.icon-yangshi_icon_tongyong_search:before {
+.icon-search:before {
   content: "\e668";
 }
 
-.icon-yangshi_icon_tongyong_like:before {
+.icon-like:before {
   content: "\e669";
 }
 
-.icon-yangshi_icon_tongyong_chat:before {
+.icon-chat:before {
   content: "\e66a";
 }
 
-.icon-yangshi_icon_tongyong_heart:before {
+.icon-heart:before {
   content: "\e66b";
 }
 
-.icon-yangshi_icon_tongyong_location:before {
+.icon-location:before {
   content: "\e66c";
 }
 
-.icon-yangshi_icon_tongyong_camera:before {
+.icon-camera:before {
   content: "\e66d";
 }
 
-.icon-yangshi_icon_tongyong_image:before {
+.icon-image:before {
   content: "\e66e";
 }
 
-.icon-yangshi_icon_tongyong_card:before {
+.icon-card:before {
   content: "\e66f";
 }
 
-.icon-yangshi_icon_tongyong_message:before {
+.icon-message:before {
   content: "\e670";
 }
 
-.icon-yangshi_icon_tongyong_calendar:before {
+.icon-calendar:before {
   content: "\e671";
 }
 
-.icon-yangshi_icon_tongyong_compass:before {
+.icon-compass:before {
   content: "\e672";
 }
 
-.icon-yangshi_icon_tongyong_home:before {
+.icon-home:before {
   content: "\e673";
 }
 
-.icon-yangshi_icon_tongyong_trips:before {
+.icon-trips:before {
   content: "\e674";
 }
 
-.icon-yangshi_icon_tongyong_wallet:before {
+.icon-wallet:before {
   content: "\e675";
 }
 
-.icon-yangshi_icon_tongyong_cart:before {
+.icon-cart:before {
   content: "\e676";
 }
 
-.icon-yangshi_icon_tongyong_steeering_wheel:before {
+.icon-steeering_wheel:before {
   content: "\e677";
 }
 
-.icon-yangshi_icon_tongyong_secure_payment:before {
+.icon-secure_payment:before {
   content: "\e678";
 }
 
-.icon-yangshi_icon_tongyong_security:before {
+.icon-security:before {
   content: "\e679";
 }
 
-.icon-yangshi_icon_tongyong_shield:before {
+.icon-shield:before {
   content: "\e67a";
 }
 
-.icon-yangshi_icon_tongyong_companion:before {
+.icon-companion:before {
   content: "\e67b";
 }
 
-.icon-yangshi_icon_tongyong_benefits:before {
+.icon-benefits:before {
   content: "\e67c";
 }
 
-.icon-yangshi_icon_tongyong_more_services:before {
+.icon-more_services:before {
   content: "\e67d";
 }
 
-.icon-yangshi_icon_tongyong_star:before {
+.icon-star:before {
   content: "\e67e";
 }
 
-.icon-yangshi_icon_tongyong_my_account:before {
+.icon-my_account:before {
   content: "\e67f";
 }
 
-.icon-yangshi_icon_tongyong_timer:before {
+.icon-timer:before {
   content: "\e680";
 }
 
-.icon-yangshi_icon_tongyong_driver:before {
+.icon-driver:before {
   content: "\e681";
 }
 
-.icon-yangshi_icon_tongyong_elder:before {
+.icon-elder:before {
   content: "\e682";
 }
 
-.icon-yangshi_icon_tongyong_share:before {
+.icon-share:before {
   content: "\e683";
 }
 
-.icon-yangshi_icon_tongyong_packet:before {
+.icon-packet:before {
   content: "\e684";
 }
 
-.icon-yangshi_icon_tongyong_time:before {
+.icon-time:before {
   content: "\e685";
 }
 
-.icon-yangshi_icon_tongyong_seat:before {
+.icon-seat:before {
   content: "\e686";
 }
 
-.icon-yangshi_icon_tongyong_clean:before {
+.icon-clean:before {
   content: "\e687";
 }
 
-.icon-yangshi_icon_tongyong_bus:before {
+.icon-bus:before {
   content: "\e688";
 }
 
-.icon-yangshi_icon_tongyong_edit:before {
+.icon-edit:before {
   content: "\e689";
 }
 
-.icon-yangshi_icon_tongyong_car:before {
+.icon-car:before {
   content: "\e68a";
 }
 
-.icon-yangshi_icon_tongyong_lock:before {
+.icon-lock:before {
   content: "\e68b";
 }
 
-.icon-yangshi_icon_tongyong_discount:before {
+.icon-discount:before {
   content: "\e68c";
 }
 
-.icon-yangshi_icon_tongyong_qr:before {
+.icon-qr:before {
   content: "\e68d";
 }
 
-.icon-yangshi_icon_tongyong_scan:before {
+.icon-scan:before {
   content: "\e68e";
 }
 
-.icon-yangshi_icon_tongyong_train:before {
+.icon-train:before {
   content: "\e68f";
 }
 
-.icon-yangshi_icon_tongyong_unlock:before {
+.icon-unlock:before {
   content: "\e690";
 }
 
-.icon-yangshi_icon_tongyong_settings:before {
+.icon-settings:before {
   content: "\e691";
 }
 
-.icon-yangshi_icon_tongyong_shuttle:before {
+.icon-shuttle:before {
   content: "\e692";
 }
 
-.icon-yangshi_icon_tongyong_phone:before {
+.icon-phone:before {
   content: "\e693";
 }
 
-.icon-yangshi_icon_tongyong_travel_card:before {
+.icon-travel_card:before {
   content: "\e694";
 }
 
-.icon-yangshi_icon_tongyong_email:before {
+.icon-email:before {
   content: "\e695";
 }
 
-.icon-yangshi_icon_tongyong_balance:before {
+.icon-balance:before {
   content: "\e696";
 }
 
-.icon-yangshi_icon_tongyong_trashcan:before {
+.icon-trashcan:before {
   content: "\e697";
 }
 
-.icon-yangshi_icon_tongyong_fast:before {
+.icon-fast:before {
   content: "\e698";
 }
 
-.icon-yangshi_icon_tongyong_receipt:before {
+.icon-receipt:before {
   content: "\e699";
 }
 
-.icon-yangshi_icon_tongyong_hot:before {
+.icon-hot:before {
   content: "\e69a";
 }
 
-.icon-yangshi_icon_tongyong_hints:before {
+.icon-hints:before {
   content: "\e69b";
 }
 
-.icon-yangshi_icon_tongyong_game:before {
+.icon-game:before {
   content: "\e69c";
 }
 
-.icon-yangshi_icon_tongyong_work:before {
+.icon-work:before {
   content: "\e69d";
 }
 
-.icon-yangshi_icon_tongyong_audio:before {
+.icon-audio:before {
   content: "\e69e";
 }
 
-.icon-yangshi_icon_tongyong_danger:before {
+.icon-danger:before {
   content: "\e69f";
 }
 
-.icon-yangshi_icon_tongyong_premium:before {
+.icon-premium:before {
   content: "\e6a0";
 }
 
-.icon-yangshi_icon_tongyong_navigation:before {
+.icon-navigation:before {
   content: "\e6a1";
 }
 
-.icon-yangshi_icon_tongyong_traffic_light:before {
+.icon-traffic_light:before {
   content: "\e6a2";
 }
 
-.icon-yangshi_icon_tongyong_conversation:before {
+.icon-conversation:before {
   content: "\e6a3";
 }
 
-.icon-yangshi_icon_tongyong_money_bag:before {
+.icon-money_bag:before {
   content: "\e6a4";
 }
 
-.icon-yangshi_icon_tongyong_reminder:before {
+.icon-reminder:before {
   content: "\e6a5";
 }
 
-.icon-yangshi_icon_tongyong_audio_mute:before {
+.icon-audio_mute:before {
   content: "\e6a6";
 }
 
-.icon-yangshi_icon_tongyong_locate:before {
+.icon-locate:before {
   content: "\e6a7";
 }
 
-.icon-yangshi_icon_tongyong_keyboard:before {
+.icon-keyboard:before {
   content: "\e6a8";
 }
 
-.icon-yangshi_icon_tongyong_report:before {
+.icon-report:before {
   content: "\e6a9";
 }
 
-.icon-yangshi_icon_tongyong_badge:before {
+.icon-badge:before {
   content: "\e6aa";
 }
 
-.icon-yangshi_icon_tongyong_attachment:before {
+.icon-attachment:before {
   content: "\e6ab";
 }
 
-.icon-yangshi_icon_tongyong_document:before {
+.icon-document:before {
   content: "\e6ac";
 }
 
-.icon-yangshi_icon_tongyong_drinks:before {
+.icon-drinks:before {
   content: "\e6ad";
 }
 
-.icon-yangshi_icon_tongyong_face_happy:before {
+.icon-face_happy:before {
   content: "\e6ae";
 }
 
-.icon-yangshi_icon_tongyong_flag:before {
+.icon-flag:before {
   content: "\e6af";
 }
 
-.icon-yangshi_icon_tongyong_face_smile:before {
+.icon-face_smile:before {
   content: "\e6b0";
 }
 
-.icon-yangshi_icon_tongyong_face_frown:before {
+.icon-face_frown:before {
   content: "\e6b1";
 }
 
-.icon-yangshi_icon_tongyong_help:before {
+.icon-help:before {
   content: "\e6b2";
 }
 
-.icon-yangshi_icon_tongyong_nav_drawer:before {
+.icon-nav_drawer:before {
   content: "\e6b3";
 }
 
-.icon-yangshi_icon_tongyong_building:before {
+.icon-building:before {
   content: "\e6b4";
 }
 
-.icon-yangshi_icon_tongyong_ticket_bus:before {
+.icon-ticket_bus:before {
   content: "\e6b5";
 }
 
-.icon-yangshi_icon_tongyong_record:before {
+.icon-record:before {
   content: "\e6b6";
 }
 
-.icon-yangshi_icon_tongyong_notification:before {
+.icon-notification:before {
   content: "\e6b7";
 }
 
-.icon-yangshi_icon_tongyong_cash_card:before {
+.icon-cash_card:before {
   content: "\e6b8";
 }
 
-.icon-yangshi_icon_tongyong_signal:before {
+.icon-signal:before {
   content: "\e6b9";
 }
 
-.icon-yangshi_icon_tongyong_ballons:before {
+.icon-ballons:before {
   content: "\e6ba";
 }
 
-.icon-yangshi_icon_tongyong_manual:before {
+.icon-manual:before {
   content: "\e6bb";
 }
 
-.icon-yangshi_icon_tongyong_ticket:before {
+.icon-ticket:before {
   content: "\e6bc";
 }
 
-.icon-yangshi_icon_tongyong_wifi:before {
+.icon-wifi:before {
   content: "\e6bd";
 }
 
-.icon-yangshi_icon_tongyong_voucher_discount:before {
+.icon-voucher_discount:before {
   content: "\e6be";
 }
 
-.icon-yangshi_icon_tongyong_voucher_merchant:before {
+.icon-voucher_merchant:before {
   content: "\e6bf";
 }
 
-.icon-yangshi_icon_tongyong_wifi_unstable:before {
+.icon-wifi_unstable:before {
   content: "\e6c0";
 }
 
-.icon-yangshi_icon_tongyong_path:before {
+.icon-path:before {
   content: "\e6c1";
 }
 
-.icon-yangshi_icon_tongyong_voucher:before {
+.icon-voucher:before {
   content: "\e6c2";
 }
 
-.icon-yangshi_icon_tongyong_arrow_up:before {
+.icon-arrow_up:before {
   content: "\e6c3";
 }
 
-.icon-yangshi_icon_tongyong_add:before {
+.icon-add:before {
   content: "\e6c4";
 }
 
-.icon-yangshi_icon_tongyong_back:before {
+.icon-back:before {
   content: "\e6c5";
 }
 
-.icon-yangshi_icon_tongyong_collapse:before {
+.icon-collapse:before {
   content: "\e6c6";
 }
 
-.icon-yangshi_icon_tongyong_close_window:before {
+.icon-close_window:before {
   content: "\e6c7";
 }
 
-.icon-yangshi_icon_tongyong_arriving:before {
+.icon-arriving:before {
   content: "\e6c8";
 }
 
-.icon-yangshi_icon_tongyong_close:before {
+.icon-close:before {
   content: "\e6c9";
 }
 
-.icon-yangshi_icon_tongyong_complain:before {
+.icon-complain:before {
   content: "\e6ca";
 }
 
-.icon-yangshi_icon_tongyong_delete:before {
+.icon-delete:before {
   content: "\e6cb";
 }
 
-.icon-yangshi_icon_tongyong_female:before {
+.icon-female:before {
   content: "\e6cc";
 }
 
-.icon-yangshi_icon_tongyong_arrow_down:before {
+.icon-arrow_down:before {
   content: "\e6cd";
 }
 
-.icon-yangshi_icon_tongyong_departure:before {
+.icon-departure:before {
   content: "\e6ce";
 }
 
-.icon-yangshi_icon_tongyong_forward:before {
+.icon-forward:before {
   content: "\e6cf";
 }
 
-.icon-yangshi_icon_tongyong_error:before {
+.icon-error:before {
   content: "\e6d0";
 }
 
-.icon-yangshi_icon_tongyong_info:before {
+.icon-info:before {
   content: "\e6d1";
 }
 
-.icon-yangshi_icon_tongyong_rising:before {
+.icon-rising:before {
   content: "\e6d2";
 }
 
-.icon-yangshi_icon_tongyong_more:before {
+.icon-more:before {
   content: "\e6d3";
 }
 
-.icon-yangshi_icon_tongyong_invisible:before {
+.icon-invisible:before {
   content: "\e6d4";
 }
 
-.icon-yangshi_icon_tongyong_maps:before {
+.icon-maps:before {
   content: "\e6d5";
 }
 
-.icon-yangshi_icon_tongyong_swap:before {
+.icon-swap:before {
   content: "\e6d6";
 }
 
-.icon-yangshi_icon_tongyong_remove:before {
+.icon-remove:before {
   content: "\e6d7";
 }
 
-.icon-yangshi_icon_tongyong_selected:before {
+.icon-selected:before {
   content: "\e6d8";
 }
 
-.icon-yangshi_icon_tongyong_question:before {
+.icon-question:before {
   content: "\e6d9";
 }
 
