--- a/src/.vuepress/public/styles/index.scss
+++ b/src/.vuepress/public/styles/index.scss
@@ -1,4 +1,13 @@
 @import url('/fonts/iconfont.scss');
+@import url('/styles/animation.scss');
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+}
 
 ::-webkit-scrollbar {
   width: 1em;
