--- a/src/.vuepress/public/fonts/iconfont.scss
+++ b/src/.vuepress/public/fonts/iconfont.scss
@@ -4,8 +4,7 @@
        url('/fonts/iconfont.woff') format('woff'),
        url('/fonts/iconfont.ttf') format('truetype');
 }
-// https://www.iconfont.cn/manage/index?manage_type=myprojects&projectId=3616492
-
+/*https://www.iconfont.cn/manage/index?manage_type=myprojects&projectId=3616492*/
 .icon-call:before {
   content: "\e663";
 }
