--- a/src/.vuepress/public/styles/animation.scss
+++ b/src/.vuepress/public/styles/animation.scss
@@ -1,13 +1,27 @@
-.rotate {
-    animation: heartDance 2s linear infinite;
+.ClockWise {
+    animation: Clockwise 2s linear infinite;
 }
 
-@keyframes heartDance {
+@keyframes Clockwise {
     0% {
         transform: rotate(0turn);
     }
 
     100% {
         transform: rotate(1turn);
+    }
+}
+
+.CounterClockWise {
+    animation: Counterclockwise 2s linear infinite;
+}
+
+@keyframes Counterclockwise {
+    0% {
+        transform: rotate(1turn);
+    }
+
+    100% {
+        transform: rotate(0turn);
     }
 }
