--- a/src/.vuepress/public/styles/index.scss
+++ b/src/.vuepress/public/styles/index.scss
@@ -1,5 +1,6 @@
 @import url('/fonts/iconfont.scss');
 @import url('/styles/animation.scss');
+
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
@@ -39,4 +40,16 @@
 
 .page-meta {
   display: none;
+}
+
+@media screen and (max-width: 900px) {
+  .page .theme-default-content {
+    padding: 2em;
+  }
+}
+
+@media (max-width: 959px) {
+  .sidebar {
+    width: 100%;
+  }
 }
