--- a/src/.vuepress/public/styles/index.scss
+++ b/src/.vuepress/public/styles/index.scss
@@ -28,8 +28,10 @@
 .page .theme-default-content {
   max-width: 90vw;
   padding: 0;
+  overflow: scroll;
 table{
   display: table;
+  overflow: scroll;
   margin: 1em auto;
 }
   .fullscreen {
