--- a/src/.vuepress/public/fonts/iconfont.scss
+++ b/src/.vuepress/public/fonts/iconfont.scss
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+  font-family: "yuyang";
+  src: url('/fonts/yuyang.ttf') format("truetype"),
+       url('/fonts/yuyang.woff') format('woff'),
+       url('/fonts/iconfont.ttf') format('truetype');
+}
+
+@font-face {
   font-family: "ag";
   src: url('/fonts/ag.otf') format('woff'),
   url('/fonts/ag.woff2') format('woff2'),
@@ -13,13 +20,7 @@
   ;
 }
 
-@font-face {
-  font-family: "ag";
-  src: url('/fonts/yuyang.woff2') format('woff2'),
-       url('/fonts/yuyang.woff') format('woff'),
-       url('/fonts/iconfont.ttf') format('truetype');
-       unicode-range: U+4E00-9FA5;
-}
+
 
 .icon-call:before {
   content: "\e663";
